tests/snapshots/test_runner__tests__compiler__typecheck__explicit_type_variable_7.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Tuple<Left> = {left: Left}

type Foo = Tuple<Foo Integer>

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_7.kk:3:18
  │
3 │ type Foo = Tuple<Foo Integer>
  │                  ^^^ Type argument name mismatch
  │
  = The expected name here is `Left`.
